--- a/src/components/CartCard.css
+++ b/src/components/CartCard.css
@@ -1,45 +1,41 @@
-.cartCard{
-    display: flex;    
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    border-radius: 5px;
-    margin: 30px 10px;
-    padding: 10px;
+.cartCard {
+  display: flex;    
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 5px;
+  margin: 30px 10px;
+  padding: 10px;
+  color: white;
+  background-color: #2c2c2c; /* Added for contrast */
+}
+
+.cartCard img {
+  width: 150px;
+  height: 100px;
+  margin-right: 10px;
+}
+
+.cartCard .productName,
+.cartCard .productPrice {
+  color: white;
+}
+
+.cartCard button {
+  border: 0px;
+  background-color: #ac0d14;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.cartCard button:hover {
+  background-color: #8e090f;
+}
+
+@media screen and (max-width: 680px) {
+  .cartCard img {
+    display: none;
   }
-  
-  .cartCard img{
-    width: 150px;
-    height: 100px;
-    margin-right: 10px;
-  }
-  
-  .cartCard .productName{
-    width: 350px;
-    margin-right: 10px;
-  }
-  
-  .cartCard .productPrice{
-    width: 100px;
-    margin-right: 10px;
-  }
-  
-  .cartCard button{
-    border: 0px;
-    background-color: #ac0d14;
-    color: #FFFFFF;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
-  
-  .cartCard button:hover{
-    background-color: #8e090f;
-  }
-  
-  
-  @media screen and (max-width: 680px) {
-    .cartCard img{
-        display: none;
-    }
-  }
+}
